# bevy_full_asset_path

./: Cargo.toml  readme.md
assets/: license.txt
examples/: animation.rs  minimal.rs  print_on_add.rs
src/: lib.rs  path_provider.rs
